--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
         }
     },
     "require": {
-        "php": "^8.1|^8.2|^8.3",
-        "jfcherng/php-diff": "^7.0",
-        "illuminate/support": "^9.0|^10.0|^11.0|^12.0"
+        "php": "^7.4",
+        "illuminate/support": "^7.0|^8.0",
+        "jfcherng/php-diff": "^6.16.2"
     },
     "extra": {
         "laravel": {
