update php compatibility

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     },
     "require": {
-        "php": "^7.4",
+        "php": ">=7.4 <=8.2",
         "illuminate/support": "^7.0|^8.0",
         "jfcherng/php-diff": "^6.16.2"
     },
